- shake for play/pause - from memory in entirebook mode

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -8,6 +8,7 @@
 
 ---- alto
 cuando se borra los internos en parse?
+uqitar el guion cuando viene palabra
 	- que se guarde en interno
 			- la primera vez que se enciende, cargar un libro completo
 		- cuando se han escuchado 20 fragmentos del mismo, cargarlo entero
