Primera version funcionante

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -1,5 +1,62 @@
+parece que en pause a veces sale ON DONE y otras ON ERROR
 
-- quitar sacudida
+COMPROBADO
+
+DONE
+    Se actualiza en interfaz WEB o LOCAL
+    NExt debe interrumpir
+NOW:
+ que se actuali e el WEB cuando se cambia (por eejemplo en GO)
+    EL Next da problemas, se desfasa la UI con lo que lee
+    no carga el buffer cuando le toca (recargar memoria)
+    ver que en NEXT se actualice toda la interfaz y se guarde en prefs
+NEXT
+    - hacer que funcione la notificación
+    - errores y log por voz
+    - que no tenga que poner runUI en cada acción, que "vaya por dentro el poner eso" de la interfaz
+ - odiados  no apareece nada
+GORDOS
+    Diccionario de palabra
+    - test unitarios
+    Con wifi que cargue todo el libro
+    que funcione el boton bluetooth
+    Usar el media player
+    definir en BBDD pronunciaciones especiales
+    Contabilidad local no sea Parse
+    Contabilidad de tiempo de escucha y estadisiticas (cuantas veces, dias totales, media de tiempo por sesión, etc)
+    UNIT test
+    que sea un service, que no se apague por uso de memoria
+    es posible hacer un widget de portada?
+    por ahora el main es una actividad, esto lo podemos cambiar?
+
+Detalles
+    barra de avance en notificación
+    frases customizables desde BBDD
+    Lectura con pauseas al final de líneas
+    al apagar bluetooth que ponga pausa
+    lectura de mayúscualas?
+    cuando ya ha leido todos  avise
+    cuando se guarda en local, también se debe guardar el summary
+    los errores los diga por voz
+    que
+
+	- al quitar auricular que se pare
+		http://stackoverflow.com/questions/13610258/how-to-detect-when-a-user-plugs-headset-on-android-device-opposite-of-action-a
+
+Pruebas:
+    - que la memoria funciona bien (que autocarga el buffer)
+
+
+------------- Diccionario
+API particular:
+    https://googledictionaryapi.eu-gb.mybluemix.net/?define=locuaces&lang=es
+
+RAE
+    https://dle.rae.es/srv/search?w=poto&m=form
+        desambiguar: (esto da un id)
+    https://dle.rae.es/srv/fetch/?id=TsCCMer%7CTsCTMKD
+
+-------------
 
 - poner boton bluetooth
 	tendré que hacer el service
@@ -12,12 +69,6 @@
 using media session
 	http://stackoverflow.com/questions/39410268/how-to-listen-to-action-down-key-pressed-event-in-android-onmediabuttonevent/39413753#39413753
 
-que sea un player.. (ya sea con el media controller o proceso BG)
-haspet
-lectura de mayúscualas?
-ver que se salta de libro en ocasiones
-mejor gestion de "cargar en memoria"
-
 ---- alto
 
 	cuando se borra los internos en parse?
@@ -27,16 +78,6 @@ mejor gestion de "cargar en memoria"
 ---- medio
 	- que apareza el chap y book actual al cambiar, en edttext
 	- quitar activitidad
-
-
----- detalles
-	- al quitar auricular que se pare
-		http://stackoverflow.com/questions/13610258/how-to-detect-when-a-user-plugs-headset-on-android-device-opposite-of-action-a
---------------------------------------------
-	- al que funcione al salir de la actividad
-	- hacer widget en portada
-	- al salir de la app se le olvida cómo parar el sonido
-	- servicio para que no se interrumpa?
 
  /////////////////// nombre de engides y voces
   [EngineInfo{name=com.samsung.SMT}, EngineInfo{name=com.google.android.tts},   EngineInfo{name=com.googlecode.eyesfree.espeak}]
