Creación de mp3s de la lectura con el sintetizador. Son ubicados en la memoria sd. Se generan ficheros de texto con el texto, para realizar posteriormente tf-idf y así nombrar cada uno de las "canciones" (que se realizarán uniendo 15 cápsulas.

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -17,6 +17,9 @@ NOW:
      lo que hay que esperar al empezar al empezar, garbage collector
      el idioma no lo coge
 BUG:
+    Que se puedan leer los mensajes de voz tipo dpipipi desde cualquier punto del código (lanzando eventos de código?)
+
+
 
 
 NEXT
